--- a/.dev.env
+++ b/.dev.env
@@ -1,10 +1,8 @@
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
-# DATABASE_USERNAME=user
-# DATABASE_PASSWORD=password
 DATABASE_USERNAME_SECURE=/database:username
 DATABASE_PASSWORD_SECURE=/database:password
-DATABASE_NAME=tdm
+DATABASE_NAME_SECURE=/database:dbname
 DATABASE_SSLMODE=disable
 
 VAULT_TOKEN=myroot
