moving interfaces to pkg service

--- a/.test.env
+++ b/.test.env
@@ -1,3 +1,5 @@
+DB_ADDRESS=postgres://root:secret@localhost:5432/tdm?sslmode=disable
+
 VAULT_TOKEN_TEST=myroot
 VAULT_PATH_TEST=/secret
 VAULT_ADDRESS_TEST=http://0.0.0.0:8300
